Grace/tests/gibbs/errors/t295.grace
// ERROR = P1018
def a = .
def b = 2
